--- a/feedback.css
+++ b/feedback.css
@@ -171,6 +171,7 @@ label {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
   margin-top: 3rem;
+  height:70%;
 }
 .i{
   color: #eeb712;
